@@ -26,6 +26,8 @@
     move packages to pkg branch
     add desktop prefs option Open folders with MIME app
     Open|Default on dir now uses MIME app
+    obey desktop file keys Path and Terminal (+full bash Exec) #232
+    execute separate commands on no desktop file Exec field code
 0.8.7   2013-03-17:
     added translation files to transifex.com [Delix]
     Delix and Aqualung71 contributed to German translation
